--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
   "dependencies": {
     "ajv": "^6.5.4",
     "apn": "^2.2.0",
-    "appoptics-apm": "^10.0.1",
-    "axios": "^0.16.2",
+    "axios": "^0.21.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "background-task": "^2.0.1",
@@ -64,14 +63,15 @@
     "express-session": "^1.15.5",
     "find": "^0.2.7",
     "glob": "^7.1.2",
-    "handlebars": "^4.0.11",
+    "handlebars": "^4.7.7",
     "kue": "^0.11.6",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.21",
     "method-override": "^2.3.9",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
     "morgan": "^1.8.2",
     "nodemailer": "^4.1.2",
+    "os": "^0.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
@@ -90,10 +90,9 @@
     "speakeasy": "^2.0.0",
     "toastr": "^2.1.4",
     "winston": "^3.3.3",
+    "winston-mongodb": "^5.0.7",
     "winston-papertrail": "^1.0.5",
-    "winston-syslog": "^2.4.4",
-    "os": "^0.1.1",
-    "winston-mongodb": "^5.0.7"
+    "winston-syslog": "^2.4.4"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -108,7 +107,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.6.0",
     "concurrently": "^3.5.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
@@ -126,7 +125,7 @@
     "jest": "^23.6.0",
     "json-loader": "^0.5.7",
     "minimist": "^1.2.5",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.14.1",
     "nodemon": "^1.18.6",
     "plop": "^1.9.0",
     "regenerator-runtime": "^0.12.1",
